--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+
+
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
-// @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_grid-framework.scss";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins/grid-framework";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
-@import "//bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_bootstrap.scss";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/media";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/forms";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+// custom
+@import "_variables.scss";
+@import "_dreamlang.sass";
