--- a/sass/_dreamlang.sass
+++ b/sass/_dreamlang.sass
@@ -45,6 +45,7 @@ img.responsive
     overflow-y: hidden
     transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55)
     background-color: $blue
+    max-height: 500px!important
     &.in
       height: auto
 
