--- a/sass/_screen.scss
+++ b/sass/_screen.scss
@@ -80,6 +80,19 @@
     height: 60px;
     }
   }
+  .dropdown-lang {
+    box-shadow: 0px 0px 0px 0px rgba(14, 14, 14, 0.53);
+    &.open {
+      box-shadow: 0px 1px 3px 0px rgba(14, 14, 14, 0.53);
+    }
+    ul {
+      > li {
+        > a {
+          padding: 15px 15px 15px 25px!important;
+        }
+      }
+    }
+  }
   .xs-clr-l {
     clear: left;
   }
