--- a/css/main.css
+++ b/css/main.css
@@ -5432,6 +5432,11 @@ section {
   }
 
   /* line 96, ../sass/_screen.scss */
+  .about {
+    padding: 50px 0;
+  }
+
+  /* line 99, ../sass/_screen.scss */
   .xs-clr-l {
     clear: left;
   }
