--- a/css/main.css
+++ b/css/main.css
@@ -4891,7 +4891,11 @@ img.responsive {
   padding: 25px 15px;
   height: 80px;
 }
-/* line 59, ../sass/_dreamlang.sass */
+/* line 55, ../sass/_dreamlang.sass */
+.navbar-brand img {
+  width: 160px;
+}
+/* line 61, ../sass/_dreamlang.sass */
 .navbar-nav > li > a,
 .navbar .navbar-nav > li > a {
   color: rgba(255, 255, 255, 0.87);
@@ -4899,7 +4903,7 @@ img.responsive {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-/* line 65, ../sass/_dreamlang.sass */
+/* line 67, ../sass/_dreamlang.sass */
 .navbar-nav > li > a:hover, .navbar-nav > li > a:focus,
 .navbar .navbar-nav > li > a:hover,
 .navbar .navbar-nav > li > a:focus {
@@ -4907,11 +4911,11 @@ img.responsive {
   background: transparent;
 }
 
-/* line 72, ../sass/_dreamlang.sass */
+/* line 74, ../sass/_dreamlang.sass */
 .dropdown-lang .dropdowns-cap {
   padding-right: 10px;
 }
-/* line 75, ../sass/_dreamlang.sass */
+/* line 77, ../sass/_dreamlang.sass */
 .dropdown-lang ul.dropdown-menu {
   padding: 0;
   border: 0;
@@ -4919,86 +4923,101 @@ img.responsive {
   background-color: #2196f3;
   box-shadow: 0px 1px 3px 0px rgba(14, 14, 14, 0.53);
 }
-/* line 82, ../sass/_dreamlang.sass */
+/* line 84, ../sass/_dreamlang.sass */
 .dropdown-lang ul.dropdown-menu .divider {
   margin: 0;
   background-color: rgba(255, 255, 255, 0.14);
 }
-/* line 87, ../sass/_dreamlang.sass */
+/* line 89, ../sass/_dreamlang.sass */
 .dropdown-lang ul.dropdown-menu > li > a {
   font-size: 1rem;
   text-decoration: none;
   padding: 10px 20px;
   color: rgba(255, 255, 255, 0.87);
 }
-/* line 92, ../sass/_dreamlang.sass */
+/* line 94, ../sass/_dreamlang.sass */
 .dropdown-lang ul.dropdown-menu > li > a:hover, .dropdown-lang ul.dropdown-menu > li > a:focus {
   color: white;
   background-color: transparent;
 }
-/* line 98, ../sass/_dreamlang.sass */
+/* line 100, ../sass/_dreamlang.sass */
 .dropdown-lang.open > a {
   background-color: transparent;
 }
 
-/* line 104, ../sass/_dreamlang.sass */
+/* line 106, ../sass/_dreamlang.sass */
 section {
   position: relative;
   padding: 100px 0;
 }
 
-/* line 108, ../sass/_dreamlang.sass */
+/* line 110, ../sass/_dreamlang.sass */
 .welcome {
   padding: 0;
   height: auto;
   width: 100%;
   background: url(../img/bg.jpg) no-repeat center center;
   background-size: cover;
+  z-index: 1;
 }
-/* line 115, ../sass/_dreamlang.sass */
+/* line 117, ../sass/_dreamlang.sass */
+.welcome::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: -1;
+}
+/* line 126, ../sass/_dreamlang.sass */
 .welcome-box {
   margin-top: 250px;
   text-align: center;
   margin-bottom: 150px;
 }
-/* line 120, ../sass/_dreamlang.sass */
+/* line 131, ../sass/_dreamlang.sass */
 .welcome-box__text {
   font-weight: 500;
   color: #ffffff;
 }
 
-/* line 126, ../sass/_dreamlang.sass */
+/* line 137, ../sass/_dreamlang.sass */
 .icon-box {
   margin-bottom: 100px;
   text-align: left;
 }
-/* line 130, ../sass/_dreamlang.sass */
+/* line 141, ../sass/_dreamlang.sass */
 .icon-box.row {
   margin-right: 0;
   margin-left: 0;
 }
-/* line 133, ../sass/_dreamlang.sass */
+/* line 144, ../sass/_dreamlang.sass */
 .icon-box__icon {
   float: left;
   margin-right: 25px;
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  background: url(../img/icons/www.png) no-repeat center center;
-  background-size: cover;
 }
-/* line 141, ../sass/_dreamlang.sass */
+/* line 150, ../sass/_dreamlang.sass */
+.icon-box__icon > img {
+  width: 100%;
+  height: 100%;
+}
+/* line 153, ../sass/_dreamlang.sass */
 .icon-box__title {
   font-weight: 500;
   color: #ffffff;
 }
-/* line 144, ../sass/_dreamlang.sass */
+/* line 156, ../sass/_dreamlang.sass */
 .icon-box__text {
   font-weight: 400;
   color: rgba(255, 255, 255, 0.57);
 }
 
-/* line 150, ../sass/_dreamlang.sass */
+/* line 162, ../sass/_dreamlang.sass */
 .about {
   border-radius: 5px;
   background: #ffffff;
@@ -5011,60 +5030,60 @@ section {
   padding: 50px 100px;
   z-index: 2;
 }
-/* line 161, ../sass/_dreamlang.sass */
+/* line 173, ../sass/_dreamlang.sass */
 .about .box {
   padding: 50px 0;
 }
-/* line 163, ../sass/_dreamlang.sass */
+/* line 175, ../sass/_dreamlang.sass */
 .about .title {
   font-weight: 400;
   text-align: center;
   margin-bottom: 50px;
 }
-/* line 167, ../sass/_dreamlang.sass */
+/* line 179, ../sass/_dreamlang.sass */
 .about .s-title {
   font-weight: 400;
   color: rgba(0, 0, 0, 0.87);
   margin-bottom: 40px;
 }
-/* line 171, ../sass/_dreamlang.sass */
+/* line 183, ../sass/_dreamlang.sass */
 .about .s-text {
   font-weight: 400;
   color: rgba(0, 0, 0, 0.57);
   margin-bottom: 50px;
 }
 
-/* line 176, ../sass/_dreamlang.sass */
+/* line 188, ../sass/_dreamlang.sass */
 .media {
   margin-top: 80px;
 }
-/* line 178, ../sass/_dreamlang.sass */
+/* line 190, ../sass/_dreamlang.sass */
 .media:first-child {
   margin-top: 80px;
 }
-/* line 180, ../sass/_dreamlang.sass */
+/* line 192, ../sass/_dreamlang.sass */
 .media .media-left {
   padding-right: 25px;
 }
-/* line 183, ../sass/_dreamlang.sass */
+/* line 195, ../sass/_dreamlang.sass */
 .media img {
   width: 100px;
   height: 100px;
 }
-/* line 186, ../sass/_dreamlang.sass */
+/* line 198, ../sass/_dreamlang.sass */
 .media .media-body {
   vertical-align: middle;
 }
-/* line 189, ../sass/_dreamlang.sass */
+/* line 201, ../sass/_dreamlang.sass */
 .media .media-body h4 {
   margin-bottom: 15px;
 }
-/* line 192, ../sass/_dreamlang.sass */
+/* line 204, ../sass/_dreamlang.sass */
 .media .media-body p {
   margin-bottom: inherit;
 }
 
-/* line 195, ../sass/_dreamlang.sass */
+/* line 207, ../sass/_dreamlang.sass */
 .footer {
   position: relative;
   background: #1976d2;
@@ -5072,7 +5091,7 @@ section {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-/* line 202, ../sass/_dreamlang.sass */
+/* line 214, ../sass/_dreamlang.sass */
 .footer .social {
   float: left;
   width: 100%;
@@ -5080,7 +5099,7 @@ section {
   padding: 0;
   margin: 0;
 }
-/* line 209, ../sass/_dreamlang.sass */
+/* line 221, ../sass/_dreamlang.sass */
 .footer .social li {
   float: left;
   background: #2196f3;
@@ -5090,11 +5109,11 @@ section {
   margin-right: 10px;
   padding: 10px;
 }
-/* line 218, ../sass/_dreamlang.sass */
+/* line 230, ../sass/_dreamlang.sass */
 .footer .social li img {
   width: 20px;
 }
-/* line 221, ../sass/_dreamlang.sass */
+/* line 233, ../sass/_dreamlang.sass */
 .footer h5 {
   color: rgba(255, 255, 255, 0.87);
   font-weight: 400;
@@ -5102,14 +5121,14 @@ section {
   margin-bottom: 30px;
   text-transform: uppercase;
 }
-/* line 227, ../sass/_dreamlang.sass */
+/* line 239, ../sass/_dreamlang.sass */
 .footer p {
   color: rgba(255, 255, 255, 0.57);
   margin: 10px 0;
   cursor: pointer;
 }
 
-/* line 239, ../sass/_dreamlang.sass */
+/* line 251, ../sass/_dreamlang.sass */
 .btn {
   position: relative;
   font-size: 1.2rem;
@@ -5122,19 +5141,19 @@ section {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   background-color: #2196f3;
 }
-/* line 251, ../sass/_dreamlang.sass */
+/* line 263, ../sass/_dreamlang.sass */
 .btn:hover, .btn:focus, .btn.focus {
   outline: 0;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
   background-color: #2196f3;
 }
-/* line 258, ../sass/_dreamlang.sass */
+/* line 270, ../sass/_dreamlang.sass */
 .btn:active, .btn.active {
   outline: 0;
   background-image: none;
 }
 
-/* line 263, ../sass/_dreamlang.sass */
+/* line 275, ../sass/_dreamlang.sass */
 .btn-default {
   color: #ffffff;
   background-color: #2196f3;
@@ -5179,7 +5198,7 @@ section {
   background-color: #ffffff;
 }
 
-/* line 266, ../sass/_dreamlang.sass */
+/* line 278, ../sass/_dreamlang.sass */
 .btn-gr {
   color: #ffffff;
   background-color: #00e676;
@@ -5224,7 +5243,7 @@ section {
   background-color: #ffffff;
 }
 
-/* line 269, ../sass/_dreamlang.sass */
+/* line 281, ../sass/_dreamlang.sass */
 .btn-info {
   color: #fff;
   background-color: #5bc0de;
@@ -5269,23 +5288,23 @@ section {
   background-color: #fff;
 }
 
-/* line 273, ../sass/_dreamlang.sass */
+/* line 285, ../sass/_dreamlang.sass */
 .btn-dream {
   background-color: #2196f3;
   margin-bottom: 30px;
 }
 
-/* line 277, ../sass/_dreamlang.sass */
+/* line 289, ../sass/_dreamlang.sass */
 .btn-gr {
   background-color: #00e676;
 }
 
-/* line 282, ../sass/_dreamlang.sass */
+/* line 294, ../sass/_dreamlang.sass */
 .withripple {
   position: relative;
 }
 
-/* line 285, ../sass/_dreamlang.sass */
+/* line 297, ../sass/_dreamlang.sass */
 .ripple-container {
   position: absolute;
   top: 0;
@@ -5298,7 +5317,7 @@ section {
   pointer-events: none;
 }
 
-/* line 296, ../sass/_dreamlang.sass */
+/* line 308, ../sass/_dreamlang.sass */
 .ripple {
   position: absolute;
   width: 20px;
@@ -5319,14 +5338,14 @@ section {
   opacity: 0;
   pointer-events: none;
 }
-/* line 316, ../sass/_dreamlang.sass */
+/* line 328, ../sass/_dreamlang.sass */
 .ripple.ripple-on {
   -webkit-transition: opacity 0.15s ease-in 0s, -webkit-transform 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
   -o-transition: opacity 0.15s ease-in 0s, -o-transform 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
   transition: opacity 0.15s ease-in 0s, transform 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
   opacity: 0.3;
 }
-/* line 321, ../sass/_dreamlang.sass */
+/* line 333, ../sass/_dreamlang.sass */
 .ripple.ripple-out {
   -webkit-transition: opacity 0.1s linear 0s !important;
   -o-transition: opacity 0.1s linear 0s !important;
