--- a/sass/_dreamlang.sass
+++ b/sass/_dreamlang.sass
@@ -52,6 +52,8 @@ img.responsive
   &-brand
     padding: 25px 15px
     height: 80px
+    img
+      width: 160px
 
   &-nav,
   .navbar-nav
@@ -111,7 +113,16 @@ section
   width: 100%
   background: url(../img/bg.jpg) no-repeat center center
   background-size: cover
-
+  z-index: 1
+  &::after
+    content: ""
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background: rgba($b, .3)
+    z-index: -1
   &-box
     margin-top: 250px
     text-align: center
@@ -136,8 +147,9 @@ section
     width: 120px
     height: 120px
     border-radius: 50%
-    background: url(../img/icons/www.png) no-repeat center center
-    background-size: cover
+    > img
+      width: 100%
+      height: 100%
   &__title
     font-weight: 500
     color: $w
