--- a/sass/_dreamlang.sass
+++ b/sass/_dreamlang.sass
@@ -249,10 +249,17 @@ $btn-default-bg: $blue
 
 .sign
   position: relative
+  max-width: 420px
   margin-top: 130px
-  padding: 30px 0
+  margin-left: auto
+  margin-right: auto
+  margin-bottom: 80px
+  padding: 30px 60px
   background: $w
   text-align: center
+  border-radius: 5px
+  box-shadow: 0px 7px 9px 0px rgba(0, 0, 0, .24)
+
 
   &-cover
     margin-bottom: 35px
@@ -266,27 +273,34 @@ $btn-default-bg: $blue
     margin-bottom: 30px
 
 .logfrom
-  width: 350px
-  max-width: 350px
+  width: 100%
   margin: 0 auto
   padding: 30px 0
 
   &-input
+    display: block
+    float: left
+    margin-bottom: 25px
     width: 100%
     padding: 10px 0
-    border-top: 0
-    border-left: 0
-    border-right: 0
-    outline: 0
-    margin-bottom: 25px
+    border: none
+    border-bottom: solid 1px $grey
+    background: linear-gradient(to bottom, rgba($w, 0) 96%, $dblue 4%)
     background-position: -25rem 0
     background-size: 25rem 100%
+    background-repeat: no-repeat
+    transition: all .3s cubic-bezier(0.4, 0, 0.2, 1)
 
   input:focus,
   input:valid
     box-shadow: none
     outline: none
+    border-color: $dblue
     background-position: 0 0
+
+  input::-webkit-input-placeholder,
+  input::-webkit-input-placeholder
+    transition: all .3s cubic-bezier(0.4, 0, 0.2, 1)
 
   input:focus::-webkit-input-placeholder,
   input:valid::-webkit-input-placeholder
@@ -294,7 +308,6 @@ $btn-default-bg: $blue
     font-size: 14px
     transform: translateY(-25px)
     visibility: visible !important
-    transition: all .3s ease-in-out
 
   &-help
     text-decoration: underline
