--- a/css/main.css
+++ b/css/main.css
@@ -5142,27 +5142,49 @@ section {
   border-radius: 5px;
   box-shadow: 0px 7px 9px 0px rgba(0, 0, 0, 0.24);
 }
-/* line 264, ../sass/_dreamlang.sass */
+/* line 263, ../sass/_dreamlang.sass */
+.sign.popover {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 320px;
+  margin: 0;
+  padding: 30px;
+}
+/* line 272, ../sass/_dreamlang.sass */
+.sign.popover.in {
+  display: block;
+}
+/* line 274, ../sass/_dreamlang.sass */
+.sign.popover > a {
+  font-size: 13px;
+}
+/* line 278, ../sass/_dreamlang.sass */
 .sign-cover {
   margin-bottom: 35px;
   width: 150px;
   height: 150px;
   border-radius: 50%;
 }
-/* line 270, ../sass/_dreamlang.sass */
+/* line 284, ../sass/_dreamlang.sass */
 .sign-title {
   text-transform: uppercase;
   font-weight: 400;
   margin-bottom: 30px;
 }
 
-/* line 275, ../sass/_dreamlang.sass */
+/* line 289, ../sass/_dreamlang.sass */
 .logfrom {
   width: 100%;
   margin: 0 auto;
   padding: 30px 0;
 }
-/* line 280, ../sass/_dreamlang.sass */
+/* line 294, ../sass/_dreamlang.sass */
+.logfrom.popover {
+  padding-bottom: 0;
+}
+/* line 297, ../sass/_dreamlang.sass */
 .logfrom-input {
   display: block;
   float: left;
@@ -5177,7 +5199,7 @@ section {
   background-repeat: no-repeat;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* line 294, ../sass/_dreamlang.sass */
+/* line 311, ../sass/_dreamlang.sass */
 .logfrom input:focus,
 .logfrom input:valid {
   box-shadow: none;
@@ -5185,12 +5207,12 @@ section {
   border-color: #1976d2;
   background-position: 0 0;
 }
-/* line 301, ../sass/_dreamlang.sass */
+/* line 318, ../sass/_dreamlang.sass */
 .logfrom input::-webkit-input-placeholder,
 .logfrom input::-webkit-input-placeholder {
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* line 305, ../sass/_dreamlang.sass */
+/* line 322, ../sass/_dreamlang.sass */
 .logfrom input:focus::-webkit-input-placeholder,
 .logfrom input:valid::-webkit-input-placeholder {
   color: rgba(0, 0, 0, 0.3);
@@ -5198,21 +5220,21 @@ section {
   transform: translateY(-25px);
   visibility: visible !important;
 }
-/* line 312, ../sass/_dreamlang.sass */
+/* line 329, ../sass/_dreamlang.sass */
 .logfrom-help {
   text-decoration: underline;
   color: #000000;
 }
-/* line 315, ../sass/_dreamlang.sass */
+/* line 332, ../sass/_dreamlang.sass */
 .logfrom-help__one {
   float: left;
 }
-/* line 317, ../sass/_dreamlang.sass */
+/* line 334, ../sass/_dreamlang.sass */
 .logfrom-help__two {
   float: right;
 }
 
-/* line 322, ../sass/_dreamlang.sass */
+/* line 339, ../sass/_dreamlang.sass */
 .btn {
   position: relative;
   font-size: 1.2rem;
@@ -5225,19 +5247,19 @@ section {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   background-color: #2196f3;
 }
-/* line 334, ../sass/_dreamlang.sass */
+/* line 351, ../sass/_dreamlang.sass */
 .btn:hover, .btn:focus, .btn.focus {
   outline: 0;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
   background-color: #2196f3;
 }
-/* line 341, ../sass/_dreamlang.sass */
+/* line 358, ../sass/_dreamlang.sass */
 .btn:active, .btn.active {
   outline: 0;
   background-image: none;
 }
 
-/* line 346, ../sass/_dreamlang.sass */
+/* line 363, ../sass/_dreamlang.sass */
 .btn-default {
   color: #ffffff;
   background-color: #2196f3;
@@ -5282,7 +5304,7 @@ section {
   background-color: #ffffff;
 }
 
-/* line 349, ../sass/_dreamlang.sass */
+/* line 366, ../sass/_dreamlang.sass */
 .btn-gr {
   color: #ffffff;
   background-color: #00e676;
@@ -5327,7 +5349,7 @@ section {
   background-color: #ffffff;
 }
 
-/* line 352, ../sass/_dreamlang.sass */
+/* line 369, ../sass/_dreamlang.sass */
 .btn-info {
   color: #fff;
   background-color: #5bc0de;
@@ -5372,18 +5394,18 @@ section {
   background-color: #fff;
 }
 
-/* line 356, ../sass/_dreamlang.sass */
+/* line 373, ../sass/_dreamlang.sass */
 .btn-dream {
   background-color: #2196f3;
   margin-bottom: 30px;
 }
 
-/* line 360, ../sass/_dreamlang.sass */
+/* line 377, ../sass/_dreamlang.sass */
 .btn-gr {
   background-color: #00e676;
 }
 
-/* line 363, ../sass/_dreamlang.sass */
+/* line 380, ../sass/_dreamlang.sass */
 .btn-log {
   text-transform: inherit;
   width: 100%;
@@ -5392,12 +5414,12 @@ section {
   margin-bottom: 20px;
 }
 
-/* line 371, ../sass/_dreamlang.sass */
+/* line 388, ../sass/_dreamlang.sass */
 .withripple {
   position: relative;
 }
 
-/* line 374, ../sass/_dreamlang.sass */
+/* line 391, ../sass/_dreamlang.sass */
 .ripple-container {
   position: absolute;
   top: 0;
@@ -5410,7 +5432,7 @@ section {
   pointer-events: none;
 }
 
-/* line 385, ../sass/_dreamlang.sass */
+/* line 402, ../sass/_dreamlang.sass */
 .ripple {
   position: absolute;
   width: 20px;
@@ -5431,14 +5453,14 @@ section {
   opacity: 0;
   pointer-events: none;
 }
-/* line 405, ../sass/_dreamlang.sass */
+/* line 422, ../sass/_dreamlang.sass */
 .ripple.ripple-on {
   -webkit-transition: opacity 0.15s ease-in 0s, -webkit-transform 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
   -o-transition: opacity 0.15s ease-in 0s, -o-transform 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
   transition: opacity 0.15s ease-in 0s, transform 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
   opacity: 0.3;
 }
-/* line 410, ../sass/_dreamlang.sass */
+/* line 427, ../sass/_dreamlang.sass */
 .ripple.ripple-out {
   -webkit-transition: opacity 0.1s linear 0s !important;
   -o-transition: opacity 0.1s linear 0s !important;
