--- a/sass/_dreamlang.sass
+++ b/sass/_dreamlang.sass
@@ -260,6 +260,20 @@ $btn-default-bg: $blue
   border-radius: 5px
   box-shadow: 0px 7px 9px 0px rgba(0, 0, 0, .24)
 
+  &.popover
+    display: none
+    position: absolute
+    top: 100%
+    right: 0
+    width: 320px
+    margin: 0
+    padding: 30px
+
+    &.in
+      display: block
+    > a
+      font-size: 13px
+
 
   &-cover
     margin-bottom: 35px
@@ -276,6 +290,9 @@ $btn-default-bg: $blue
   width: 100%
   margin: 0 auto
   padding: 30px 0
+
+  &.popover
+    padding-bottom: 0
 
   &-input
     display: block
