add sign up nested functionality

--- a/css/main.css
+++ b/css/main.css
@@ -5468,6 +5468,119 @@ section {
   opacity: 0;
 }
 
+/* line 434, ../sass/_dreamlang.sass */
+.volunteer-toggle {
+  clear: both;
+  margin-top: 15px;
+  margin-bottom: 25px;
+  position: relative;
+  float: left;
+  line-height: 1.6em;
+  width: 100%;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+/* line 439, ../sass/_dreamlang.sass */
+.volunteer-toggle label {
+  float: left;
+}
+/* line 442, ../sass/_dreamlang.sass */
+.volunteer-toggle input:empty {
+  display: none;
+}
+/* line 445, ../sass/_dreamlang.sass */
+.volunteer-toggle input:empty ~ label:before, .volunteer-toggle input:empty ~ label:after {
+  position: absolute;
+  display: block;
+  content: " ";
+  cursor: pointer;
+  -webkit-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+}
+/* line 452, ../sass/_dreamlang.sass */
+.volunteer-toggle input:empty ~ label:before {
+  top: 5px;
+  right: 4px;
+  width: 34px;
+  height: 14px;
+  border-radius: 6px;
+  background-color: #5a5a5a;
+  opacity: 0.6;
+}
+
+/* line 470, ../sass/_dreamlang.sass */
+input.switch:empty ~ label:after {
+  top: 2px;
+  right: 0px;
+  width: 1.4em;
+  height: 8px;
+  bottom: 0.1em;
+  margin-left: 0.1em;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 0;
+  border-color: #5a5a5a;
+  -webkit-box-shadow: -1px 2px 6px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 2px 6px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 2px 6px -1px rgba(0, 0, 0, 0.75);
+}
+
+/* line 489, ../sass/_dreamlang.sass */
+.volunteer-toggle input:checked ~ label:before {
+  background-color: #00aeef;
+}
+/* line 491, ../sass/_dreamlang.sass */
+.volunteer-toggle input:checked ~ label:after {
+  right: 20px;
+  background-color: #00aeef;
+  border-color: #00aeef;
+}
+
+/* line 497, ../sass/_dreamlang.sass */
+.form-group {
+  text-align: left;
+  margin-bottom: 25px;
+}
+
+/* line 501, ../sass/_dreamlang.sass */
+.lingulus-select {
+  padding: 5px;
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  outline: 0;
+}
+/* line 508, ../sass/_dreamlang.sass */
+.lingulus-select-day {
+  width: 20%;
+  float: left;
+}
+/* line 512, ../sass/_dreamlang.sass */
+.lingulus-select-month {
+  width: 20%;
+  margin-left: 30px;
+}
+/* line 516, ../sass/_dreamlang.sass */
+.lingulus-select-year {
+  width: 40%;
+  float: right;
+}
+/* line 520, ../sass/_dreamlang.sass */
+.lingulus-select-lang {
+  width: 100%;
+}
+
+/* line 523, ../sass/_dreamlang.sass */
+.volunteer-lang {
+  display: none;
+}
+
 @media (max-width: 1199px) {
   /* line 4, ../sass/_screen.scss */
   .welcome-box {
