--- a/sass/_dreamlang.sass
+++ b/sass/_dreamlang.sass
@@ -429,3 +429,96 @@ $btn-default-bg: $blue
     -o-transition: opacity 0.1s linear 0s !important
     transition: opacity 0.1s linear 0s !important
     opacity: 0
+
+// toggle volunteer
+.volunteer-toggle
+  clear: both
+  margin-top: 15px
+  margin-bottom: 25px
+
+  label
+    float: left
+
+  input:empty
+    display: none
+    ~ label
+      &:before, &:after
+        position: absolute
+        display: block
+        content: ' '
+        cursor: pointer
+        -webkit-transition: all 200ms ease-in
+        transition: all 200ms ease-in
+      &:before
+        top: 5px
+        right: 4px
+        width: 34px
+        height: 14px
+        border-radius: 6px
+        background-color: #5a5a5a
+        opacity: 0.60
+  position: relative
+  float: left
+  line-height: 1.6em
+  width: 100%
+  cursor: pointer
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+
+input.switch:empty ~ label:after
+  top: 2px
+  right: 0px
+  width: 1.4em
+  height: 8px
+  bottom: 0.1em
+  margin-left: 0.1em
+  background-color: #ffffff
+  border-radius: 50%
+  width: 20px
+  height: 20px
+  border-radius: 50%
+  border: 0
+  border-color: #5a5a5a
+  -webkit-box-shadow: -1px 2px 6px -1px rgba(0, 0, 0, 0.75)
+  -moz-box-shadow: -1px 2px 6px -1px rgba(0, 0, 0, 0.75)
+  box-shadow: -1px 2px 6px -1px rgba(0, 0, 0, 0.75)
+
+.volunteer-toggle input:checked ~ label
+  &:before
+    background-color: #00aeef
+  &:after
+    right: 20px
+    background-color: #00aeef
+    border-color: #00aeef
+
+// form group
+.form-group
+  text-align: left
+  margin-bottom: 25px
+
+.lingulus-select
+  padding: 5px
+  border-top: 0
+  border-right: 0
+  border-left: 0
+  outline: 0
+
+  &-day
+    width: 20%
+    float: left
+
+  &-month
+    width: 20%
+    margin-left: 30px
+
+  &-year
+    width: 40%
+    float: right
+
+  &-lang
+    width: 100%
+
+.volunteer-lang
+  display: none
