--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,5 +19,6 @@
 @import "../bower_components/css-hamburgers/_sass/hamburgers/hamburgers.scss";
 // custom
 @import "_variables.scss";
+@import "_material_components.sass";
 @import "_dreamlang.sass";
 @import "_screen.scss";
